--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ewd-vista-push-handler",
-  "engines" : { "node" : ">=6" },
-  "version": "0.1.0",
+  "engines": {
+    "node": ">=6"
+  },
+  "version": "0.1.1",
   "description": "QEWD VistA: VistA Data Push handler",
   "main": "index.js",
   "author": "Sam Habiel",
